fix(layout): fix topbar overflowing small screens

--- a/style/layout/_search.scss
+++ b/style/layout/_search.scss
@@ -31,7 +31,7 @@
   &-box {
     width: 100%;
     height: 100%;
-    padding: 6px;
+    padding: 6px 0;
     border: none;
     outline: none;
     box-sizing: border-box;
